--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -67,8 +67,8 @@
                 </div>
                 <div class="col">
                     <select class="form-control" id="hand" name="hand">
-                        <option value="right" selected>Right (Change this if you are left handed)</option>
-                        <option value="left">Left</option>
+                        <option value="right" selected>Right Handed</option>
+                        <option value="left">Left Handed</option>
                     </select>
                 </div>
             </div>
