--- a/app/templates/station.html
+++ b/app/templates/station.html
@@ -83,6 +83,7 @@
                             </form>
                         </td>
                         <td>
+                            cur:--{{ current_player }}--
                             {% if next_player.started != true and current_player == '' %}
                             <form id="form{{ next_player.displayName }}" method="POST">
                                 <input type="hidden" name="email" value="{{ next_player.email }}" />
