--- a/app/templates/station.html
+++ b/app/templates/station.html
@@ -84,7 +84,7 @@
                         </td>
                         <td>
                             cur:--{{ (current_player == '') }}--
-                            {% if next_player.started != true and current_player == '' %}
+                            {% if next_player.started != True and current_player != True %}
                             <form id="form{{ next_player.displayName }}" method="POST">
                                 <input type="hidden" name="email" value="{{ next_player.email }}" />
                                 <input type="hidden" name="displayName" value="{{ next_player.displayName }}" />
