--- a/app/templates/station.html
+++ b/app/templates/station.html
@@ -52,7 +52,7 @@
     </div>
     <div class="next-player">
         {% if next_player %}
-        <h2>Up next</h2>
+        <h2>Current Player</h2>
             <table class="table table-striped table-bordered table-dark table-hover">
                 <thead>
                     <tr>
