--- a/app/templates/station.html
+++ b/app/templates/station.html
@@ -75,12 +75,14 @@
                         <td>{{ ((next_player.scores|default([0]))|sort(reverse=True))[0] }}</td>
                         <td>{{ (next_player.scores|default([]))|length }}</td>
                         <td>
+                            {% if next_player.started != True %}                            
                             <form id="form{{ next_player.displayName }}" method="POST">
                                 <input type="hidden" name="email" value="{{ next_player.email }}" />
                                 <input type="hidden" name="displayName" value="{{ next_player.displayName }}" />
                                 <input type="hidden" name="action" value="cancel" />
                                 <button class="btn btn-danger" type="submit">Cancel</button>
                             </form>
+                            {% endif %}                            
                         </td>
                         <td>
                             {% if next_player.started != True %}
