--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -102,7 +102,51 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        Please ask facilitator for the Terms and Conditions.
+
+                        
+<p>COMPETITION OVERVIEW</p>
+<ol>
+<li>The Competition will run from 11.30am on Friday 23rd November to Wednesday 26<sup>th</sup> December 2018 at 5.30pm.</li>
+<li>HOW TO ENTER: To enter, Eligible individuals must be over the age of eight and play the Candy Cane VR Game at Market City Centre Court on level 1, 9-13 Hay Street, Haymarket NSW Australia. If the player is under eighteen years of age, they must be accompanied by a parent or a supervisior adult who is over the age of eighteen. The child must submit a player&rsquo;s name and the adult must submit their contact details in the entry form.</li>
+</ol>
+<ul>
+<li>To win the Ultimate Santa Sack and be the Candy Cane Fight VR Champion the highest score must be gained between 23/11/18 to 26/12/18.</li>
+<li>The Weekly Top Score competition play period is Week 1 - from 23/11/18 to 29/11/18; Week 2 - from 30/11/18 to 6/12/18; Week 3 &ndash; from 7/12/18 to 13/12/18; Week 4 &ndash; from 14/12/18 to 20/12/18; Week 5 - from 21/12/18 to 26/12/18.</li>
+<li>To win the daily prizes, the player/participant must play the game and reach a score at the discretion of the promoter.</li>
+</ul>
+<p>&nbsp;</p>
+<ol start="2">
+<li>WHO CAN ENTER 3. Entry is eligible to those who live in Sydney Australia. Employees (and their immediate families) of the Promoter, participating retailers and agencies associated with this competition are ineligible to enter. Immediate family means any of the following: spouse, ex-spouse, de-facto spouse, child or step-child (whether natural or by adoption), parent, step-parent, grandparent, step-grandparent, uncle, aunt, niece, nephew, brother, sister, step-brother, step-sister or first cousin.</li>
+<li>The Promoter reserves the right, at any time, to remove entries from the Game and entrants (including an entrant&rsquo;s identity, age and place of residence) and to disqualify any entrant who submits an entry that is not in accordance with these Terms and Conditions or who tampers with the entry process. Errors and omissions will be accepted at the Promoter's discretion. Failure by the Promoter to enforce any of its rights at any stage does not constitute a waiver of those rights. Incomplete or indecipherable entries will be deemed invalid.</li>
+<li>THE PRIZES:</li>
+</ol>
+<p>All players/participants who play Candy Cane Fight VR game and gain more than 100 points will receive one of the 6,400 Candy Canes valued at fifty cents each (total value $3200).</p>
+<p>&nbsp;</p>
+<p>The Daily Prizes are twenty Dangerfields Gift cards valued at $20 each (total value $400); two Ally Fashion Gift Cards valued at $20 each (total value $40); Two Review Gift Cards valued at $100 each (total value $200); Two Crumpler Gift Cards valued at $25 each (total value $50); Ten 1001 Optical vouchers valued at $30 each (total value $300); Three UGG Scarves from MC Souvenirs valued at $49.95 (total value $149.85); Ninety-five Playtime voucher valued at $25 each (total value $2,375); Eight Chatime Gift Cards valued at $10 each (total value $80); Small Coffee, classic tea or hot chocolate vouchers from Doolies valued at $3 each (total value $1800); Retail Shopping vouchers from Market City valued at $10 each (total value $4000); 1909 Dining Precinct voucher valued at $10 each (total value $2000); Cotton peak caps valued at $11 each (total value $3850); Water bottle valued at $11 each (total value $3,850); Yo-Yo valued at $5 each (total value $4000); ROG T-shirt 38 units valued at $25 (total value $950); ROG Key ring 37 units valued at $5 each (total value $185); ROG towel 4 units valued at $30 each (total value $120); ROG pillows 5 unit valued at $49 each (total $245); ROG lanyard 30 unit valued at 10 each (total value $300); ROG Hoodie jackets 4 unit valued at $139 each (total value $556); Cooler Master caps 11 units valued at $11 each (total value $110); Cool Master mouse pad SWIFT-RXm valued at $20.67;&nbsp; Cooler Master Pin set valued at $20; Cooler Master Audio headphones MH320 value at $43.26</p>
+<p>&nbsp;</p>
+<p>To win the Weekly Top Score prize of $100 Market City Voucher, the participant must play the Candy Cane Fight VR game and gain the highest score for the week they played as listed in point 1.</p>
+<p>&nbsp;</p>
+<p>To win the Ultimate Santa Sack and be the Champion of the Candy Cane Fight VR 2018, the participant must play the and gain the highest score between 23/11/18 to 26/12/18. The Ultimate Santa Sack prize value is $1,561 (Market City Retail voucher valued at $200; 1909 Dining Precinct voucher valued at $200; Dangerfield gift card valued at $200; Skechers Shoes gift card valued at $120; Review gift card valued at $100; Merino Ugg Scarf from MC Souvenirs valued at $49.95; MH752 Gaming Headset valued at $43.36; 1001 Optical voucher valued at $30; Market City branded water bottle $10;&nbsp; Playtime Vouchers (x5 15 minutes of Play) valued at $25 each (total $120); Chatime voucher valued at $20 (2x $10 vouchers); Cooler Master peripheral pads MP510 valued at $50; Cooler Master Pins set value at $20; OSIM uPamper 2 Handheld Massager valued at $298; Market City black cap valued at $10; Market City yoyo valued at $6 (2x $3 each); ROG towel valued at $30 and ROG pillow valued at $49.</p>
+<p><br /> Total prize value of the Candy Cane Fight VR at Market City is $33,198.14.</p>
+<p>COMPETITION GUIDELINES&nbsp;</p>
+<ol start="6">
+<li>These Terms and Conditions govern the Competition. All other information provided prior to entering the competition, including any instructions on how to enter the Competition, form part of these guidelines. By participating in this competition, you accept these conditions. Any entry not complying with these Terms and Conditions is invalid.</li>
+<li>Multiple entries are accepted as a player can play as many times as they would like in centre each day. However, only one user name can be set up per player and each player can only win up to 2 prizes per day.</li>
+<li>The Prize must be taken as stated and is not transferable to another person (unless agreed to by the Promoter) or exchangeable for other goods and services and cannot be redeemed for cash. All prizes will be given out at the discretion of the Market City Management Team.</li>
+<li>The daily prize will be awarded by the promotional staff after reviewing the final score played for each game. If the player exceeds the score that is showed on the notice board next to the sign-up stand determined by the Market City Management Team, they will be entitled to a prize and receive a &lsquo;green stamp&rsquo; from the promotional staff. If a player plays multiple times in the same day, then the player can receive their prize(s) at the end of their last game of play for the day. To claim the daily prize(s), the player must go to the info desk on level 1.</li>
+<li>The five Weekly Top Score prize must achieve the highest score for the week to win. There&rsquo;re five weekly prizes to win across the five weeks, if a participant/player has won a weekly prize, they are not entitled to another Weekly Top Score prize.</li>
+<li>The Ultimate Santa Sack/Candy Cane Fight VR champion will be announced on 28/12/18. The Weekly Top Score winner will be announced on these dates: Week 1 on 30/11/18; Week 2 on 7/12/18; Week 3 on 14/12/18; Week 4 on 21/12/18; Week 5 on 28/12/18.</li>
+</ol>
+<p>&nbsp;</p>
+<ol start="12">
+<li>All winners will be contacted via email or telephone as per the listed dates to notify them the details of picking up the prizes. The winner will be announced as per the listed dates on Market City Social Media channels Facebook (<a href="http://www.facebook.com/marketcity">www.facebook.com/marketcity</a>).</li>
+<li>Market City reserves the right to amend these rules at any time. Market City may also create rules which will apply to a specific competition only. If we do this, we will publish the amended competition rules and/or specific competition rules on the relevant competition communications.</li>
+<li>If an advertised prize is not available, we reserve the right to offer an alternative prize of equal or greater value.</li>
+<li>The Ultimate Santa Sack and the weekly prizes must be claimed at the Customer Information Desk - Monday to Friday between 9am to 5pm or Saturday or Sunday between 10am to 5pm. The winner must show the message that was sent to them by Market City, plus a photographic ID to claim the prize.</li>
+<li>If the Winners does not claim the prize by Sunday 20th January end of day, the winner will forfeit the prize(s) and another winner will be selected and notified by 31<sup>st</sup> of January 2018.</li>
+</ol>                        
+                        
+                        
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">
