--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,7 +25,7 @@
         <div class="snow-form">
             <h4>Create report</h4>
                 <!-- Signup Form -->
-                <form id="reportForm" method="GET" action="/WIxJPpENIKApy0RkFqINnIVllmIJT99FIMeg9NqeKgxcPCUa5uhSMkdEm6lE/players" target="_blank" class="needs-validation" novalidate>
+                <form id="reportForm" method="GET" action="/players" target="_blank" class="needs-validation" novalidate>
     
                     <label for="dateSelector">Select date range</label>
                     <div class="form-group" id="dateSelector" name="dateSelector">
@@ -78,7 +78,7 @@
                         </div>
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="radio" name="report" id="inlineRadio2" value="scores"
-                                onclick="$('#reportForm').attr('action','/WIxJPpENIKApy0RkFqINnIVllmIJT99FIMeg9NqeKgxcPCUa5uhSMkdEm6lE/scores')">
+                                onclick="$('#reportForm').attr('action','/scores')">
                             <label class="form-check-label" for="inlineRadio2">Scores</label>
                         </div>
                         <div class="form-check form-check-inline">
