--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -78,7 +78,7 @@
                         </div>
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="radio" name="report" id="inlineRadio2" value="scores"
-                                onclick="$('#reportForm').attr('action','/scores')">
+                                onclick="$('#reportForm').attr('action','/scoresraw')">
                             <label class="form-check-label" for="inlineRadio2">Scores</label>
                         </div>
                         <div class="form-check form-check-inline">
